--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,12 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+button.deleteButton {
+  background-color: red;
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  width: 150px;
+  height: 25px;
+  float: right;
+}
