--- a/public/style.css
+++ b/public/style.css
@@ -28,3 +28,11 @@ button.deleteButton {
   height: 25px;
   float: right;
 }
+
+button.deleteButton2 {
+  background-color: red;
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  width: 150px;
+  height: 25px;
+}
