--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,11 @@ body {
 a {
   text-decoration: none;
 }
+#app {
+  background-color: rgb(187, 124, 223);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 label {
   display: block;
@@ -20,8 +25,13 @@ form div {
   display: inline-block;
 }
 
+.individual-book {
+  border-style: groove;
+  background-origin: padding-box;
+}
+
 button.deleteButton {
-  background-color: red;
+  background-color: rgb(40, 185, 117);
   color: white;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   width: 150px;
@@ -30,10 +40,16 @@ button.deleteButton {
 }
 
 button.deleteButton2 {
-  background-color: red;
+  background-color: rgb(47, 161, 127);
   color: white;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   width: 150px;
+  height: 24px;
+}
+
+.minusplus {
+  background-color: rgb(47, 161, 127);
+  color: white;
   height: 25px;
 }
 
@@ -45,4 +61,10 @@ button.deleteButton2 {
 .confirmation-page {
   color: rebeccapurple;
   text-size-adjust: 100px;
+}
+
+.title {
+  color: white;
+  text-indent: 2%;
+  text-decoration: underline;
 }
