--- a/public/style.css
+++ b/public/style.css
@@ -1,70 +1,77 @@
 body {
   font-family: sans-serif;
+  background-image: url('slack-imgs.jpg');
+  background-repeat: no-repeat;
+  background-position: center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-attachment: fixed;
+  background-size: auto;
+  background-size: cover;
 }
-
+input:focus {
+  background-color: rgba(206, 216, 26, 0.748);
+  outline-width: 0;
+}
+button:focus {
+  outline-width: 0;
+}
 a {
   text-decoration: none;
+  color: black;
+  font-weight: bolder;
 }
 #app {
-  background-color: rgb(187, 124, 223);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: rgba(163, 155, 158, 0.892);
+  font-family: -apple-system, BlinkMacSystemFont, ‘Segoe UI’, Roboto, Oxygen,
+    Ubuntu, Cantarell, ‘Open Sans’, ‘Helvetica Neue’, sans-serif;
 }
-
 label {
   display: block;
 }
-
 nav a {
   display: inline-block;
   margin: 1em;
 }
-
 form div {
   margin: 1em;
   display: inline-block;
 }
-
 .individual-book {
   border-style: groove;
   background-origin: padding-box;
 }
-
 button.deleteButton {
   background-color: rgb(40, 185, 117);
   color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: ‘Segoe UI’, Tahoma, Geneva, Verdana, sans-serif;
   width: 150px;
   height: 25px;
   float: right;
 }
-
 button.deleteButton2 {
   background-color: rgb(47, 161, 127);
   color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: ‘Segoe UI’, Tahoma, Geneva, Verdana, sans-serif;
   width: 150px;
   height: 24px;
 }
-
 .minusplus {
   background-color: rgb(47, 161, 127);
   color: white;
   height: 25px;
 }
-
 .fa-shopping-cart {
   color: rgb(9, 145, 55);
   font-size: 25px;
 }
-
 .confirmation-page {
   color: rebeccapurple;
   text-size-adjust: 100px;
 }
-
 .title {
-  color: white;
+  color: black;
   text-indent: 2%;
   text-decoration: underline;
 }
