--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,23 @@
 * {
-  margin: 0;
+  /* margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box; */
   font-family: 'Maven Pro', sans-serif;
   scroll-behavior: smooth;
 }
+/* //------------NAV----------------// */
+
+.link:focus {
+  color: rgb(88, 174, 148);
+  font-weight: bolder;
+}
+
+nav a {
+  display: inline-block;
+  margin: 2em;
+  font-size: 18px;
+}
+
 /* //------------HEADER----------------// */
 header {
   position: fixed;
@@ -19,11 +32,14 @@ header {
   background-color: white;
   transition: 0.5s;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 header .logo {
   color: black;
   font-family: 'Maven Pro', sans-serif;
-  font-size: 24px;
+  font-size: 30px;
   text-decoration: none;
   font-weight: 700;
   letter-spacing: 1px;
@@ -71,43 +87,32 @@ a {
 label {
   display: block;
 }
-nav a {
-  display: inline-block;
-  margin: 2em;
-  font-size: 20px;
-}
-.nav {
-  flex-direction: row;
-  background-color: aqua;
-}
-form div {
-  margin: 1em;
-  display: inline-block;
-}
+
 /* //------------ALL BOOKS----------------// */
 
 .books-list {
   display: flex;
-  flex-direction: row;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   align-content: center;
   padding: 150px;
 }
 .individual-book {
-  width: 30%;
-  height: 30%;
+  width: 25%;
+  height: 25%;
+  margin: 50px;
+  justify-content: center;
+  align-items: center;
   align-content: center;
-  padding: 20px;
-  padding-top: 10px;
-  padding-bottom: 80px;
+  /* padding: 20px; */
+  /* padding-top: 10px;
+  padding-bottom: 80px; */
 }
 .book-title {
   width: 80%;
   font-weight: 900;
   font-size: 20px;
-  flex-direction: row;
-  flex-flow: row wrap;
   padding-top: 10px;
   text-decoration: none;
   color: black;
@@ -119,7 +124,8 @@ form div {
   padding-top: 10px;
 }
 .individual-book img {
-  width: 40%;
+  width: 20vh;
+  height: 30vh;
 }
 .addToCartButton {
   background-color: rgb(88, 174, 148);
@@ -180,16 +186,136 @@ form div {
   font-size: 18px;
 }
 /* //----------------------------CART--------------------------------// */
+.cart-container {
+  display: flex;
+  align-items: flex-start;
+}
+.cart-box {
+  border: 1px solid #ccc;
+  width: 90vh;
+  margin: 100px;
+  flex: 2;
+}
+.sub-total-box {
+  border: 1px solid #ccc;
+  width: 30vh;
+  margin: 200px;
+  flex: 1;
+}
+.cart-checkout-button-container {
+  display: flex;
+  justify-content: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.cart-title-container {
+  font-family: 'Maven Pro', sans-serif;
+  font-size: 20px;
+  background: rgb(225, 245, 240);
+  padding: 1rem;
+  text-align: center;
+}
+.cart-cell {
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid #ccc;
+}
+.cart-image-container {
+  width: 50%;
+  height: 50%;
+  padding-left: 50px;
+  padding-top: 100px;
+  padding-bottom: 50px;
+  display: inline-flex;
+  justify-content: center;
+}
+.cart-rest-container {
+  width: 60%;
+  min-width: 300px;
+}
+.cart-book-title {
+  width: 80%;
+  font-size: 20px;
+  padding-top: 40px;
+  padding-bottom: 10px;
+}
+.cart-book-genre {
+  padding-bottom: 10px;
+}
+.cart-book-unit-price {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 18px;
+}
+.cart-book-total-price {
+  padding-top: 20px;
+  font-size: 18px;
+}
+.cart-quantity {
+  padding-top: 10px;
+  display: flex;
+  flex-direction: row;
+}
+.qty-input {
+  width: 33px;
+  height: 26px;
+  text-align: center;
+  background: rgb(225, 245, 240);
+  padding-top: 5px;
+}
+.minusplus {
+  background-color: rgb(47, 161, 127);
+  color: white;
+  height: 30px;
+  width: 33px;
+  font-size: 20px;
+  border: none;
+}
+.update-quantity-button {
+  background-color: rgb(47, 161, 127);
+  margin-left: 20px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-family: 'Maven Pro', sans-serif;
+  width: 120px;
+  height: 30px;
+}
+.remove-button-container {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.remove-from-cart-button {
+  font-size: 14px;
+  background-color: rgb(47, 161, 127);
+  color: white;
+  font-family: 'Maven Pro', sans-serif;
+  width: 150px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+}
+
+.cart-checkout-button {
+  font-size: 14px;
+  background-color: rgb(47, 161, 127);
+  color: white;
+  font-family: 'Maven Pro', sans-serif;
+  width: 150px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+}
 
 /* //---------------------------LOG IN------------------------------// */
 .login-container-div {
   padding-top: 200px;
 }
-
 .login-content-div {
   padding: 10px;
   margin: 50px auto;
   width: 375px;
+  height: 400px;
   border-radius: 5px;
   background-color: #fbfaf6;
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
@@ -219,6 +345,7 @@ form div {
   grid-template-columns: 1ft;
   grid-template-rows: auto;
   justify-content: center;
+  padding-bottom: 40px;
 }
 .login-form-email {
   width: 300px;
@@ -230,12 +357,15 @@ form div {
   height: 30px;
   border-radius: 5px;
 }
+.sign-in-button-container {
+  padding-top: 40px;
+}
 .sign-in-button {
   background-color: rgb(88, 174, 148);
   font-size: 16px;
   color: white;
   height: 25px;
-  width: 300px;
+  width: 305px;
   height: 40px;
   border: none;
   border-radius: 5px;
@@ -246,11 +376,6 @@ input:focus {
 }
 /* //---------------------------------------------------------------// */
 
-.minusplus {
-  background-color: rgb(47, 161, 127);
-  color: white;
-  height: 25px;
-}
 button.deleteButton {
   background-color: rgb(40, 185, 117);
   color: white;
@@ -266,7 +391,6 @@ button.deleteButton2 {
   width: 150px;
   height: 24px;
 }
-
 .fa-shopping-cart {
   color: rgb(9, 145, 55);
   font-size: 25px;
